/* $Id: ChangeLog,v 1.1618 2001-07-28 18:05:27 sandervl Exp $ */

 2001-07-28: Sander van Leeuwen <sandervl@xs4all.nl>
    - USER32:   o Set/GetWindowWord changes (must handle GWW_ID, GWW_HINSTANCE 
                  and GWW_HWNDPARENT
                o Ported ArrangeIconicWindows from Wine (not complete yet)
                o Rewrote Get/SetDoubleClickTime & SwapMouseButton
                o Don't call O32_GetLastActivePopup
                  (TODO: must rewrite it)
    - KERNEL32: o Rewrote FatalAppExitA/W, FatalExit, Beep, IsBadHugeReadPtr,
                  IsBadHugeWritePtr
                o Removed O32_HeapCreate/Destroy calls; return rtl heap handle
                o No longer use Open32's GetProcAddress or GetModuleFileName
    - USER32/KERNEL32:
                o Moved WaitForInputIdle & AttachThreadInput from user32 to 
                  kernel32

 2001-07-22: Sander van Leeuwen <sandervl@xs4all.nl>
    - TOOLS\INSTALL: 
                o Added some quartz.dll keys
    - COMCTL32: o Status window bugfix; check part number boundary
                  (fixes crash in AudioGalaxy)
    - USER32:   o IsWindowVisible fix; check WS_CHILD flag before calling GetParent
                  (fixes invisible characters while typing in edit control
                   of AudioGalaxy)

 2001-07-21: Sander van Leeuwen <sandervl@xs4all.nl>
    - DINPUT, DPLAYX, ICMP, IMAGEHLP, IMM32, LZ32, 
      MSVFW32, OLEPRO32, RICHED32, URLMON, VERSION, WININET
                o Added Wine license

    - AVIFIL32, SHELL32, COMCTL32, COMDLG32, MSACM32, NTDLL, OLE32, OLAUT32,
      SHDOCVW, SETUPAPI, SHLWAPI, OLECLI32, OLEDLG, OLESVR32, RPCRT4
                o Replaced Wine license with updated version
    - COMCTL32: o Resync with Wine (20010720); comboex, comctl32undoc, rebar,
                  imagelist, toolbar, pager
    - MSVFW32:  o Resync with Wine (20010720); all
    - AVIFIL32: o Resync with Wine (20010720); all
    - GDI32:    o Fixed brush leak in InternalTextOutA