@@ -1,4 +1,4 @@
-/* $Id: ChangeLog,v 1.1618 2001-07-28 18:05:27 sandervl Exp $ */
+/* $Id: ChangeLog,v 1.1619 2001-07-28 18:47:51 sandervl Exp $ */
 
  2001-07-28: Sander van Leeuwen <sandervl@xs4all.nl>
     - USER32:   o Set/GetWindowWord changes (must handle GWW_ID, GWW_HINSTANCE 
@@ -6,7 +6,7 @@
                 o Ported ArrangeIconicWindows from Wine (not complete yet)
                 o Rewrote Get/SetDoubleClickTime & SwapMouseButton
                 o Don't call O32_GetLastActivePopup
-                  (TODO: must rewrite it)
+                  (TODO: rewrite it)
     - KERNEL32: o Rewrote FatalAppExitA/W, FatalExit, Beep, IsBadHugeReadPtr,
                   IsBadHugeWritePtr
                 o Removed O32_HeapCreate/Destroy calls; return rtl heap handle
@@ -14,6 +14,8 @@
     - USER32/KERNEL32:
                 o Moved WaitForInputIdle & AttachThreadInput from user32 to 
                   kernel32
+    - TOOLS\INSTALL: 
+                o Create temp directory in windows dir
 
  2001-07-22: Sander van Leeuwen <sandervl@xs4all.nl>
     - TOOLS\INSTALL: 
